fixed dark mode and made ui consisted

--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,7 @@ body.dark-mode .nav-item:hover, body.dark-mode .get-started-btn:hover {
 }
 
 body.dark-mode .dark-toggle {
-  background: #181c2f;
+ 
   color: #9ce4fc;
 }
 body.dark-mode .dark-toggle:hover {
